--- a/index.html
+++ b/index.html
@@ -110,22 +110,28 @@
         </header>
         <main id="main">
             <!-- Hero section -->
-            <article class="bg-light text-primary" data-hero>
-                <div>
-                    <p class="text-accent uppercase">Discover your business</p>
-                    <h1 class="fs-900 ff-heading fw-bold">
-                        We Consult Your Business Needs
-                    </h1>
-                    <p>
-                        Building and maintaining strong relationships with
-                        clients, ensuring they are satisfied with your services
-                        and addressing any concerns.
-                    </p>
-                    <button class="bg-accent ff-accent uppercase">
-                        Get appointment
-                    </button>
+            <article class="hero | bg-light text-primary" data-hero>
+                <div class="wrapper grid">
+                    <div class="flow">
+                        <p class="text-accent uppercase">
+                            Discover your business
+                        </p>
+                        <h1 class="fs-800 ff-heading fw-bold">
+                            We Consult Your Business Needs
+                        </h1>
+                        <p>
+                            Building and maintaining strong relationships with
+                            clients, ensuring they are satisfied with your
+                            services and addressing any concerns.
+                        </p>
+                        <button
+                            class="btn-primary | bg-accent ff-accent uppercase"
+                        >
+                            Get appointment
+                        </button>
+                    </div>
+                    <img class="hero__image" src="images/hero.webp" alt="" />
                 </div>
-                <img src="images/hero.webp" alt="" />
             </article>
             <!-- About section -->
             <article id="about">
