feat: added fade in animations to hero elements

--- a/index.html
+++ b/index.html
@@ -113,24 +113,24 @@
             <article class="hero | bg-light text-primary" data-hero>
                 <div class="wrapper grid">
                     <div class="flow">
-                        <p class="text-accent uppercase">
+                        <p class="hero__top-text | text-accent uppercase" data-fade-in-top-text>
                             Discover your business
                         </p>
-                        <h1 class="fs-800 ff-heading fw-bold">
+                        <h1 class="hero__title | fs-800 ff-heading fw-bold" data-fade-in-title>
                             We Consult Your Business Needs
                         </h1>
-                        <p>
+                        <p class="hero__text" data-fade-in-text>
                             Building and maintaining strong relationships with
                             clients, ensuring they are satisfied with your
                             services and addressing any concerns.
                         </p>
                         <button
-                            class="btn-primary | bg-accent ff-accent uppercase"
+                            class="hero__cta | btn-primary bg-accent ff-accent uppercase" data-fade-in-cta
                         >
                             Get appointment
                         </button>
                     </div>
-                    <img class="hero__image" src="images/hero.webp" alt="" />
+                    <img class="hero__image" data-fade-in-image src="images/hero.webp" alt="" />
                 </div>
             </article>
             <!-- About section -->
