feat: styled portfolio section

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
             href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
             rel="stylesheet"
         />
+        <link
+            rel="stylesheet"
+            href="//unpkg.com/a11y-slider@latest/dist/a11y-slider.css"
+        />
         <link rel="stylesheet" href="css/styles.css" />
         <script src="js/script.js" defer></script>
     </head>
@@ -471,44 +475,105 @@
                     </div>
                 </div>
             </article>
-            <article id="portfolio">
-                <h5 class="text-accent fs-400 uppercase">Projects</h5>
-                <p class="fs-600 ff-heading fw-bold">Recent case studies</p>
-                <article class="text-primary">
-                    <article>
-                        <img src="images/project1.webp" alt="" />
-                        <h6 class="fs-400">Consulting</h6>
-                        <p class="ff-heading">Support technology</p>
+            <!-- Portfolio section -->
+            <article class="portfolio | wrapper flow" id="portfolio">
+                <h5 class="text-accent fs-400 uppercase text-center">
+                    Projects
+                </h5>
+                <p class="fs-600 ff-heading fw-bold text-center">
+                    Recent case studies
+                </p>
+                <article class="text-primary slider">
+                    <article class="project">
+                        <img
+                            class="project__image"
+                            src="images/project1.webp"
+                            alt=""
+                        />
+                        <div class="grid">
+                            <h6 class="fs-400">Consulting</h6>
+                            <p class="ff-heading fs-500 fw-bold fs-500 fw-bold">
+                                Support technology
+                            </p>
+                        </div>
                     </article>
-                    <article>
-                        <img src="images/project2.webp" alt="" />
-                        <h6 class="fs-400">Marketing</h6>
-                        <p class="ff-heading">Stock Market Analysis</p>
+                    <article class="project">
+                        <img
+                            class="project__image"
+                            src="images/project2.webp"
+                            alt=""
+                        />
+                        <div class="grid">
+                            <h6 class="fs-400">Marketing</h6>
+                            <p class="ff-heading fs-500 fw-bold">
+                                Stock Market Analysis
+                            </p>
+                        </div>
                     </article>
-                    <article>
-                        <img src="images/project3.webp" alt="" />
-                        <h6 class="fs-400">Marketing</h6>
-                        <p class="ff-heading">Sales Analysis</p>
+                    <article class="project">
+                        <img
+                            class="project__image"
+                            src="images/project3.webp"
+                            alt=""
+                        />
+                        <div class="grid">
+                            <h6 class="fs-400">Marketing</h6>
+                            <p class="ff-heading fs-500 fw-bold">
+                                Sales Analysis
+                            </p>
+                        </div>
                     </article>
-                    <article>
-                        <img src="images/project4.webp" alt="" />
-                        <h6 class="fs-400">Marketing</h6>
-                        <p class="ff-heading">Stock Investment</p>
+                    <article class="project">
+                        <img
+                            class="project__image"
+                            src="images/project4.webp"
+                            alt=""
+                        />
+                        <div class="grid">
+                            <h6 class="fs-400">Marketing</h6>
+                            <p class="ff-heading fs-500 fw-bold">
+                                Stock Investment
+                            </p>
+                        </div>
                     </article>
-                    <article>
-                        <img src="images/project5.webp" alt="" />
-                        <h6 class="fs-400">Business</h6>
-                        <p class="ff-heading">Big Data Services</p>
+                    <article class="project">
+                        <img
+                            class="project__image"
+                            src="images/project5.webp"
+                            alt=""
+                        />
+                        <div class="grid">
+                            <h6 class="fs-400">Business</h6>
+                            <p class="ff-heading fs-500 fw-bold">
+                                Big Data Services
+                            </p>
+                        </div>
                     </article>
-                    <article>
-                        <img src="images/project6.webp" alt="" />
-                        <h6 class="fs-400">Consulting</h6>
-                        <p class="ff-heading">HR Recruiting</p>
+                    <article class="project">
+                        <img
+                            class="project__image"
+                            src="images/project6.webp"
+                            alt=""
+                        />
+                        <div class="grid">
+                            <h6 class="fs-400">Consulting</h6>
+                            <p class="ff-heading fs-500 fw-bold">
+                                HR Recruiting
+                            </p>
+                        </div>
                     </article>
-                    <article>
-                        <img src="images/project7.webp" alt="" />
-                        <h6 class="fs-400">Business</h6>
-                        <p class="ff-heading">Advertising technology</p>
+                    <article class="project">
+                        <img
+                            class="project__image"
+                            src="images/project7.webp"
+                            alt=""
+                        />
+                        <div class="grid">
+                            <h6 class="fs-400">Business</h6>
+                            <p class="ff-heading fs-500 fw-bold">
+                                Advertising technology
+                            </p>
+                        </div>
                     </article>
                 </article>
                 <article id="team">
@@ -741,5 +806,16 @@
                 </form>
             </article>
         </main>
+        <script src="//unpkg.com/a11y-slider@latest/dist/a11y-slider.js"></script>
+        <script>
+            document.addEventListener("DOMContentLoaded", () => {
+                const previousButton =
+                    document.querySelector(".a11y-slider-prev");
+                const nextButton = document.querySelector(".a11y-slider-next");
+
+                previousButton.innerHTML = "<";
+                nextButton.innerHTML = ">";
+            });
+        </script>
     </body>
 </html>
