fix: fixed the width of some images in team section

--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@
                     <div class="grid">
                         <article class="team__consultant">
                             <div>
-                                <img src="images/consultant1.webp" alt="" />
+                                <img class="team__consultant-image" src="images/consultant1.webp" alt="" />
                                 <div
                                     class="team__consultant-socials | bg-accent flex"
                                 >
@@ -720,7 +720,7 @@
                         </article>
                         <article class="team__consultant">
                             <div>
-                                <img src="images/consultant2.webp" alt="" />
+                                <img class="team__consultant-image" src="images/consultant2.webp" alt="" />
                                 <div
                                     class="team__consultant-socials | bg-accent flex"
                                 >
@@ -815,7 +815,7 @@
                         </article>
                         <article class="team__consultant">
                             <div>
-                                <img src="images/consultant3.webp" alt="" />
+                                <img class="team__consultant-image" src="images/consultant3.webp" alt="" />
                                 <div
                                     class="team__consultant-socials | bg-accent flex"
                                 >
@@ -910,7 +910,7 @@
                         </article>
                         <article class="team__consultant">
                             <div>
-                                <img src="images/consultant4.webp" alt="" />
+                                <img class="team__consultant-image" src="images/consultant4.webp" alt="" />
                                 <div
                                     class="team__consultant-socials | bg-accent flex"
                                 >
