feat: styled testimonial section

--- a/index.html
+++ b/index.html
@@ -1007,22 +1007,24 @@
                 </div>
             </article>
             <!-- Testimonial section -->
-            <article class="text-primary">
-                <h6 class="text-accent fs-400 uppercase">Customer reviews</h6>
-                <p class="fs-600 ff-heading fw-bold">
-                    Reviews from our clients
-                </p>
-                <p>
-                    Accusamus minus consectetur nostrum molestias corrupti
-                    recusandae vero sapiente aliquam nesciunt unde, commodi
-                    ratione! Hic laudantium itaque animi, nesciunt officia
-                    reprehenderit ratione ipsam aliquam quo ducimus eligendi
-                    error quae, neque ex culpa? Cupiditate consequatur quis iste
-                    eius minus facilis ratione.
-                </p>
-                <img src="images/testimonial1.webp" alt="" />
-                <p class="fw-bold">Jane Doe</p>
-                <p class="fw-bold">CEO, Kept IT Solutions</p>
+            <article class="testimonial | text-primary bg-light">
+                <div class="wrapper text-center flow">
+                    <h6 class="text-accent fs-400 uppercase">Customer reviews</h6>
+                    <p class="fs-600 ff-heading fw-bold">
+                        Reviews from our clients
+                    </p>
+                    <p>
+                        Accusamus minus consectetur nostrum molestias corrupti
+                        recusandae vero sapiente aliquam nesciunt unde, commodi
+                        ratione! Hic laudantium itaque animi, nesciunt officia
+                        reprehenderit ratione ipsam aliquam quo ducimus eligendi
+                        error quae, neque ex culpa? Cupiditate consequatur quis iste
+                        eius minus facilis ratione.
+                    </p>
+                    <img class="testimonial__image" src="images/testimonial1.webp" alt="" />
+                    <p class="fw-bold">Jane Doe</p>
+                    <p class="fw-bold">CEO, Kept IT Solutions</p>
+                </div>
             </article>
             <!-- Blog Section -->
             <article id="blog">
