feat: styled blog section

--- a/index.html
+++ b/index.html
@@ -625,7 +625,11 @@
                     <div class="grid">
                         <article class="team__consultant">
                             <div>
-                                <img class="team__consultant-image" src="images/consultant1.webp" alt="" />
+                                <img
+                                    class="team__consultant-image"
+                                    src="images/consultant1.webp"
+                                    alt=""
+                                />
                                 <div
                                     class="team__consultant-socials | bg-accent flex"
                                 >
@@ -720,7 +724,11 @@
                         </article>
                         <article class="team__consultant">
                             <div>
-                                <img class="team__consultant-image" src="images/consultant2.webp" alt="" />
+                                <img
+                                    class="team__consultant-image"
+                                    src="images/consultant2.webp"
+                                    alt=""
+                                />
                                 <div
                                     class="team__consultant-socials | bg-accent flex"
                                 >
@@ -815,7 +823,11 @@
                         </article>
                         <article class="team__consultant">
                             <div>
-                                <img class="team__consultant-image" src="images/consultant3.webp" alt="" />
+                                <img
+                                    class="team__consultant-image"
+                                    src="images/consultant3.webp"
+                                    alt=""
+                                />
                                 <div
                                     class="team__consultant-socials | bg-accent flex"
                                 >
@@ -910,7 +922,11 @@
                         </article>
                         <article class="team__consultant">
                             <div>
-                                <img class="team__consultant-image" src="images/consultant4.webp" alt="" />
+                                <img
+                                    class="team__consultant-image"
+                                    src="images/consultant4.webp"
+                                    alt=""
+                                />
                                 <div
                                     class="team__consultant-socials | bg-accent flex"
                                 >
@@ -1009,7 +1025,9 @@
             <!-- Testimonial section -->
             <article class="testimonial | text-primary bg-light">
                 <div class="wrapper text-center flow">
-                    <h6 class="text-accent fs-400 uppercase">Customer reviews</h6>
+                    <h6 class="text-accent fs-400 uppercase">
+                        Customer reviews
+                    </h6>
                     <p class="fs-600 ff-heading fw-bold">
                         Reviews from our clients
                     </p>
@@ -1018,83 +1036,146 @@
                         recusandae vero sapiente aliquam nesciunt unde, commodi
                         ratione! Hic laudantium itaque animi, nesciunt officia
                         reprehenderit ratione ipsam aliquam quo ducimus eligendi
-                        error quae, neque ex culpa? Cupiditate consequatur quis iste
-                        eius minus facilis ratione.
+                        error quae, neque ex culpa? Cupiditate consequatur quis
+                        iste eius minus facilis ratione.
                     </p>
-                    <img class="testimonial__image" src="images/testimonial1.webp" alt="" />
+                    <img
+                        class="testimonial__image"
+                        src="images/testimonial1.webp"
+                        alt=""
+                    />
                     <p class="fw-bold">Jane Doe</p>
                     <p class="fw-bold">CEO, Kept IT Solutions</p>
                 </div>
             </article>
             <!-- Blog Section -->
-            <article id="blog">
+            <article class="blog | wrapper flow" id="blog">
                 <h6 class="text-accent fs-400 uppercase">Blog</h6>
                 <p class="fs-600 ff-heading fw-bold">Read latest updates</p>
-                <article>
-                    <img src="images/blog-article1.webp" alt="" />
-                    <p class="ff-heading fw-bold">
-                        Repellat quae aliquam a et exercitationem. Ipsa eligendi
-                        ratione reprehenderit cupiditate labore.
-                    </p>
-                    <svg
-                        xmlns="http://www.w3.org/2000/svg"
-                        width="80"
-                        height="80"
-                    >
-                        <path d="M0 0h80v80H0V0Z" fill="#C5C5C5" />
-                        <path
-                            d="M48.313 16.063C52.68 19.21 56.28 22.84 58 28c.525 4.999.593 8.857-1.75 13.375C54.254 43.704 52.247 45.913 50 48l1.574 1.137C60.548 55.722 67.282 62.882 70 74v6H10c1.105-11.052 3.652-19.404 12-27 2.58-1.838 5.226-3.472 8-5l-1.496-1.645-1.942-2.167-1.933-2.145c-2.875-3.606-3.027-7.186-2.977-11.629.783-5.437 4.075-9.26 8.035-12.852 5.608-3.788 12.273-3.537 18.625-1.5Z"
-                            fill="#FDFDFD"
-                        />
-                    </svg>
-                    <p>kasbiz</p>
-                    <p>02/08/2024</p>
-                </article>
-                <article>
-                    <img src="images/blog-article2.webp" alt="" />
-                    <p class="ff-heading fw-bold">
-                        Nostrum, sed aut? Magni natus repellendus laborum et
-                        possimus. Nemo, incidunt. Repellendus excepturi
-                        molestiae, error, voluptates consequatur velit nemo
-                        aliquam inventore dolores tempore quisquam facere
-                        voluptatem pariatur porro incidunt accusamus autem ad!
-                    </p>
-                    <svg
-                        xmlns="http://www.w3.org/2000/svg"
-                        width="80"
-                        height="80"
-                    >
-                        <path d="M0 0h80v80H0V0Z" fill="#C5C5C5" />
-                        <path
-                            d="M48.313 16.063C52.68 19.21 56.28 22.84 58 28c.525 4.999.593 8.857-1.75 13.375C54.254 43.704 52.247 45.913 50 48l1.574 1.137C60.548 55.722 67.282 62.882 70 74v6H10c1.105-11.052 3.652-19.404 12-27 2.58-1.838 5.226-3.472 8-5l-1.496-1.645-1.942-2.167-1.933-2.145c-2.875-3.606-3.027-7.186-2.977-11.629.783-5.437 4.075-9.26 8.035-12.852 5.608-3.788 12.273-3.537 18.625-1.5Z"
-                            fill="#FDFDFD"
-                        />
-                    </svg>
-                    <p>kasbiz</p>
-                    <p>12/07/2024</p>
-                </article>
-                <article>
-                    <img src="images/blog-article1.webp" alt="" />
-                    <p class="ff-heading fw-bold">
-                        Illo eos eveniet non commodi pariatur odit porro, ullam,
-                        doloremque eligendi architecto quam error ut repudiandae
-                        nihil atque dignissimos consequuntur iure esse veniam
-                        reprehenderit explicabo cum!
-                    </p>
-                    <svg
-                        xmlns="http://www.w3.org/2000/svg"
-                        width="80"
-                        height="80"
-                    >
-                        <path d="M0 0h80v80H0V0Z" fill="#C5C5C5" />
-                        <path
-                            d="M48.313 16.063C52.68 19.21 56.28 22.84 58 28c.525 4.999.593 8.857-1.75 13.375C54.254 43.704 52.247 45.913 50 48l1.574 1.137C60.548 55.722 67.282 62.882 70 74v6H10c1.105-11.052 3.652-19.404 12-27 2.58-1.838 5.226-3.472 8-5l-1.496-1.645-1.942-2.167-1.933-2.145c-2.875-3.606-3.027-7.186-2.977-11.629.783-5.437 4.075-9.26 8.035-12.852 5.608-3.788 12.273-3.537 18.625-1.5Z"
-                            fill="#FDFDFD"
-                        />
-                    </svg>
-                    <p>kasbiz</p>
-                    <p>29/06/2024</p>
-                </article>
+                <div class="grid">
+                    <article class="blog__article | flow">
+                        <img src="images/blog-article1.webp" alt="" />
+                        <div class="flow">
+                            <p class="ff-heading fw-bold">
+                                Repellat quae aliquam a et exercitationem.
+                            </p>
+                            <div class="flex">
+                                <div class="flex">
+                                    <svg
+                                        xmlns="http://www.w3.org/2000/svg"
+                                        viewBox="0 0 20 20"
+                                        id="Profile"
+                                    >
+                                        <g fill="none" fill-rule="evenodd">
+                                            <g
+                                                fill="#c5c5c5"
+                                                transform="translate(-140 -2159)"
+                                                class="color000000 svgShape"
+                                            >
+                                                <g
+                                                    transform="translate(56 160)"
+                                                    fill="#c5c5c5"
+                                                    class="color000000 svgShape"
+                                                >
+                                                    <path
+                                                        d="M100.563 2017H87.438c-.706 0-1.228-.697-.961-1.338 1.236-2.964 4.14-4.662 7.523-4.662 3.384 0 6.288 1.698 7.524 4.662.267.641-.255 1.338-.961 1.338m-10.646-12c0-2.206 1.832-4 4.083-4 2.252 0 4.083 1.794 4.083 4s-1.831 4-4.083 4c-2.251 0-4.083-1.794-4.083-4m14.039 11.636c-.742-3.359-3.064-5.838-6.119-6.963 1.619-1.277 2.563-3.342 2.216-5.603-.402-2.623-2.63-4.722-5.318-5.028-3.712-.423-6.86 2.407-6.86 5.958 0 1.89.894 3.574 2.289 4.673-3.057 1.125-5.377 3.604-6.12 6.963-.27 1.221.735 2.364 2.01 2.364h15.892c1.276 0 2.28-1.143 2.01-2.364"
+                                                        fill="#c5c5c5"
+                                                        class="color000000 svgShape"
+                                                    ></path>
+                                                </g>
+                                            </g>
+                                        </g>
+                                    </svg>
+
+                                    <p>kasbiz</p>
+                                </div>
+                                <p>02/08/2024</p>
+                            </div>
+                        </div>
+                    </article>
+                    <article class="blog__article | flow">
+                        <img src="images/blog-article2.webp" alt="" />
+                        <div class="flow">
+                            <p class="ff-heading fw-bold">
+                                Nostrum, sed aut? Magni natus repellendus autem
+                                ad!
+                            </p>
+                            <div class="flex">
+                                <div class="flex">
+                                    <svg
+                                        xmlns="http://www.w3.org/2000/svg"
+                                        viewBox="0 0 20 20"
+                                        id="Profile"
+                                    >
+                                        <g fill="none" fill-rule="evenodd">
+                                            <g
+                                                fill="#c5c5c5"
+                                                transform="translate(-140 -2159)"
+                                                class="color000000 svgShape"
+                                            >
+                                                <g
+                                                    transform="translate(56 160)"
+                                                    fill="#c5c5c5"
+                                                    class="color000000 svgShape"
+                                                >
+                                                    <path
+                                                        d="M100.563 2017H87.438c-.706 0-1.228-.697-.961-1.338 1.236-2.964 4.14-4.662 7.523-4.662 3.384 0 6.288 1.698 7.524 4.662.267.641-.255 1.338-.961 1.338m-10.646-12c0-2.206 1.832-4 4.083-4 2.252 0 4.083 1.794 4.083 4s-1.831 4-4.083 4c-2.251 0-4.083-1.794-4.083-4m14.039 11.636c-.742-3.359-3.064-5.838-6.119-6.963 1.619-1.277 2.563-3.342 2.216-5.603-.402-2.623-2.63-4.722-5.318-5.028-3.712-.423-6.86 2.407-6.86 5.958 0 1.89.894 3.574 2.289 4.673-3.057 1.125-5.377 3.604-6.12 6.963-.27 1.221.735 2.364 2.01 2.364h15.892c1.276 0 2.28-1.143 2.01-2.364"
+                                                        fill="#c5c5c5"
+                                                        class="color000000 svgShape"
+                                                    ></path>
+                                                </g>
+                                            </g>
+                                        </g>
+                                    </svg>
+
+                                    <p>kasbiz</p>
+                                </div>
+                                <p>12/07/2024</p>
+                            </div>
+                        </div>
+                    </article>
+                    <article class="blog__article | flow">
+                        <img src="images/blog-article1.webp" alt="" />
+                        <div class="flow">
+                            <p class="ff-heading fw-bold">
+                                Illo eos eveniet non commodi pariatur odit
+                                porro.
+                            </p>
+                            <div class="flex">
+                                <div class="flex">
+                                    <svg
+                                        xmlns="http://www.w3.org/2000/svg"
+                                        viewBox="0 0 20 20"
+                                        id="Profile"
+                                    >
+                                        <g fill="none" fill-rule="evenodd">
+                                            <g
+                                                fill="#c5c5c5"
+                                                transform="translate(-140 -2159)"
+                                                class="color000000 svgShape"
+                                            >
+                                                <g
+                                                    transform="translate(56 160)"
+                                                    fill="#c5c5c5"
+                                                    class="color000000 svgShape"
+                                                >
+                                                    <path
+                                                        d="M100.563 2017H87.438c-.706 0-1.228-.697-.961-1.338 1.236-2.964 4.14-4.662 7.523-4.662 3.384 0 6.288 1.698 7.524 4.662.267.641-.255 1.338-.961 1.338m-10.646-12c0-2.206 1.832-4 4.083-4 2.252 0 4.083 1.794 4.083 4s-1.831 4-4.083 4c-2.251 0-4.083-1.794-4.083-4m14.039 11.636c-.742-3.359-3.064-5.838-6.119-6.963 1.619-1.277 2.563-3.342 2.216-5.603-.402-2.623-2.63-4.722-5.318-5.028-3.712-.423-6.86 2.407-6.86 5.958 0 1.89.894 3.574 2.289 4.673-3.057 1.125-5.377 3.604-6.12 6.963-.27 1.221.735 2.364 2.01 2.364h15.892c1.276 0 2.28-1.143 2.01-2.364"
+                                                        fill="#c5c5c5"
+                                                        class="color000000 svgShape"
+                                                    ></path>
+                                                </g>
+                                            </g>
+                                        </g>
+                                    </svg>
+
+                                    <p>kasbiz</p>
+                                </div>
+                                <p>29/06/2024</p>
+                            </div>
+                        </div>
+                    </article>
+                </div>
             </article>
             <!-- Contact section -->
             <article id="contact" class="text-primary">
