--- a/index.html
+++ b/index.html
@@ -1178,103 +1178,84 @@
                 </div>
             </article>
             <!-- Contact section -->
-            <article id="contact" class="text-primary">
-                <h6 class="fs-600 ff-heading fw-bold">Contact</h6>
-                <p>
-                    <svg
-                        xmlns="http://www.w3.org/2000/svg"
-                        enable-background="new 0 0 16 16"
-                        viewBox="0 0 16 16"
-                        id="Map"
-                    >
-                        <path
-                            fill="none"
-                            stroke="#7bb332"
-                            stroke-miterlimit="10"
-                            d="M4.2,7.1l0.1,0.2l0.2,0.3l2.9,4.7c0.2,0.4,0.8,0.6,1.2,0.3c0.1-0.1,0.2-0.2,0.3-0.3L11.8,7
-                      c0.2-0.4,0.4-1.2,0.4-1.6c-0.1-2.3-2-4.1-4.3-4.1C5.7,1.2,3.8,3,3.7,5.3C3.7,5.9,3.9,6.6,4.2,7.1z"
-                            class="colorStroke231f20 svgStroke"
-                        ></path>
-                        <circle
-                            cx="8"
-                            cy="5"
-                            r="1.4"
-                            fill="none"
-                            stroke="#7bb332"
-                            stroke-miterlimit="10"
-                            class="colorStroke231f20 svgStroke"
-                        ></circle>
-                        <path
-                            fill="none"
-                            stroke="#7bb332"
-                            stroke-miterlimit="10"
-                            d="M9.8,11c1.6,0.3,2.7,1,2.7,1.8c0,1.1-2,2-4.5,2s-4.5-0.9-4.5-2c0-0.8,1.2-1.6,2.8-1.8"
-                            class="colorStroke231f20 svgStroke"
-                        ></path></svg
-                    >123 Street, Nairobi
-                </p>
-                <p>
-                    <svg
-                        xmlns="http://www.w3.org/2000/svg"
-                        enable-background="new 0 0 16 16"
-                        viewBox="0 0 16 16"
-                        id="Map"
-                    >
-                        <path
-                            fill="none"
-                            stroke="#7bb332"
-                            stroke-miterlimit="10"
-                            d="M4.2,7.1l0.1,0.2l0.2,0.3l2.9,4.7c0.2,0.4,0.8,0.6,1.2,0.3c0.1-0.1,0.2-0.2,0.3-0.3L11.8,7
-                      c0.2-0.4,0.4-1.2,0.4-1.6c-0.1-2.3-2-4.1-4.3-4.1C5.7,1.2,3.8,3,3.7,5.3C3.7,5.9,3.9,6.6,4.2,7.1z"
-                            class="colorStroke231f20 svgStroke"
-                        ></path>
-                        <circle
-                            cx="8"
-                            cy="5"
-                            r="1.4"
-                            fill="none"
-                            stroke="#7bb332"
-                            stroke-miterlimit="10"
-                            class="colorStroke231f20 svgStroke"
-                        ></circle>
-                        <path
-                            fill="none"
-                            stroke="#7bb332"
-                            stroke-miterlimit="10"
-                            d="M9.8,11c1.6,0.3,2.7,1,2.7,1.8c0,1.1-2,2-4.5,2s-4.5-0.9-4.5-2c0-0.8,1.2-1.6,2.8-1.8"
-                            class="colorStroke231f20 svgStroke"
-                        ></path></svg
-                    >0712345678
-                </p>
-                <p>
-                    <svg
-                        xmlns="http://www.w3.org/2000/svg"
-                        viewBox="0 0 24 24"
-                        id="Email"
-                    >
-                        <g fill="#7bb332" class="color000000 svgShape">
-                            <path
-                                d="M19 4H5a3 3 0 0 0-3 3v10a3 3 0 0 0 3 3h14a3 3 0 0 0 3-3V7a3 3 0 0 0-3-3zm-.67 2L12 10.75 5.67 6zM19 18H5a1 1 0 0 1-1-1V7.25l7.4 5.55a1 1 0 0 0 .6.2 1 1 0 0 0 .6-.2L20 7.25V17a1 1 0 0 1-1 1z"
-                                fill="#7bb332"
-                                class="color000000 svgShape"
-                            ></path>
-                        </g></svg
-                    >info@kasbiz.com
-                </p>
-                <form>
-                    <input type="text" name="name" id="" placeholder="Name" />
-                    <input
-                        type="email"
-                        name="email"
-                        id=""
-                        placeholder="Email"
-                    />
-                    <input type="text" name="phone" id="" placeholder="phone" />
-                    <textarea name="" id="" placeholder="Message"></textarea>
-                    <button class="bg-accent ff-accent uppercase">
-                        Submit
-                    </button>
-                </form>
+            <article class="contact" id="contact" class="text-primary">
+                <div class="wrapper flow">
+                    <h6 class="fs-600 ff-heading fw-bold">Contact</h6>
+                    <div class="grid">
+                        <div class="flow bg-secondary text-primary">
+                            <p class="contact__info | flex">
+                                <svg
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    enable-background="new 0 0 16 16"
+                                    viewBox="0 0 16 16"
+                                    id="Map"
+                                >
+                                    <path
+                                        fill="none"
+                                        stroke="#7bb332"
+                                        stroke-miterlimit="10"
+                                        d="M4.2,7.1l0.1,0.2l0.2,0.3l2.9,4.7c0.2,0.4,0.8,0.6,1.2,0.3c0.1-0.1,0.2-0.2,0.3-0.3L11.8,7
+                                  c0.2-0.4,0.4-1.2,0.4-1.6c-0.1-2.3-2-4.1-4.3-4.1C5.7,1.2,3.8,3,3.7,5.3C3.7,5.9,3.9,6.6,4.2,7.1z"
+                                        class="colorStroke231f20 svgStroke"
+                                    ></path>
+                                    <circle
+                                        cx="8"
+                                        cy="5"
+                                        r="1.4"
+                                        fill="none"
+                                        stroke="#7bb332"
+                                        stroke-miterlimit="10"
+                                        class="colorStroke231f20 svgStroke"
+                                    ></circle>
+                                    <path
+                                        fill="none"
+                                        stroke="#7bb332"
+                                        stroke-miterlimit="10"
+                                        d="M9.8,11c1.6,0.3,2.7,1,2.7,1.8c0,1.1-2,2-4.5,2s-4.5-0.9-4.5-2c0-0.8,1.2-1.6,2.8-1.8"
+                                        class="colorStroke231f20 svgStroke"
+                                    ></path></svg
+                                >12345 Street, Nairobi
+                            </p>
+                            <p class="contact__info | flex">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" id="Phone">
+                                    <path d="M27.308,20.649l-2.2-2.2a3.521,3.521,0,0,0-4.938-.021,2.152,2.152,0,0,1-2.729.267A15.026,15.026,0,0,1,13.3,14.562a2.181,2.181,0,0,1,.284-2.739A3.521,3.521,0,0,0,13.553,6.9l-2.2-2.2a3.514,3.514,0,0,0-4.961,0l-.633.634c-3.3,3.3-3.053,10.238,3.813,17.1,4.14,4.141,8.307,5.875,11.686,5.875a7.5,7.5,0,0,0,5.418-2.061l.634-.634A3.513,3.513,0,0,0,27.308,20.649ZM25.894,24.2l-.634.634c-2.6,2.6-8.339,2.125-14.276-3.813S4.571,9.34,7.171,6.74L7.8,6.107a1.511,1.511,0,0,1,2.133,0l2.2,2.2a1.511,1.511,0,0,1,.021,2.11,4.181,4.181,0,0,0-.531,5.239,17.01,17.01,0,0,0,4.713,4.706,4.179,4.179,0,0,0,5.231-.517,1.512,1.512,0,0,1,2.118.013l2.2,2.2A1.51,1.51,0,0,1,25.894,24.2Z" fill="#7bb332" class="color000000 svgShape"></path>
+                                  </svg>
+                                  </svg
+                                >0712345678
+                            </p>
+                            <p class="contact__info | flex">
+                                <svg
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    viewBox="0 0 24 24"
+                                    id="Email"
+                                >
+                                    <g fill="#7bb332" class="color000000 svgShape">
+                                        <path
+                                            d="M19 4H5a3 3 0 0 0-3 3v10a3 3 0 0 0 3 3h14a3 3 0 0 0 3-3V7a3 3 0 0 0-3-3zm-.67 2L12 10.75 5.67 6zM19 18H5a1 1 0 0 1-1-1V7.25l7.4 5.55a1 1 0 0 0 .6.2 1 1 0 0 0 .6-.2L20 7.25V17a1 1 0 0 1-1 1z"
+                                            fill="#7bb332"
+                                            class="color000000 svgShape"
+                                        ></path>
+                                    </g></svg
+                                >info@kasbiz.com
+                            </p>
+                        </div>
+                        <form class="contact__form | bg-secondary grid">
+                            <input type="text" name="name" id="" placeholder="Name" />
+                            <input
+                                type="email"
+                                name="email"
+                                id=""
+                                placeholder="Email"
+                            />
+                            <input type="text" name="phone" id="" placeholder="Phone" />
+                            <input type="text" name="website" id="" placeholder="Your website" />
+                            <textarea name="" id="" placeholder="Message"></textarea>
+                            <button class="btn-primary | bg-accent text-primary ff-accent uppercase">
+                                Submit
+                            </button>
+                        </form>
+                    </div>
+                </div>
             </article>
         </main>
         <script src="//unpkg.com/a11y-slider@latest/dist/a11y-slider.js"></script>
