fix: fixed some navigation styles

--- a/index.html
+++ b/index.html
@@ -816,7 +816,7 @@
                             </div>
                             <div class="text-center">
                                 <h6 class="fs-500 ff-heading fw-bold">
-                                    James Henry
+                                    Davis Klay
                                 </h6>
                                 <p class="uppercase">Senior Consultant</p>
                             </div>
@@ -915,7 +915,7 @@
                             </div>
                             <div class="text-center">
                                 <h6 class="fs-500 ff-heading fw-bold">
-                                    Patience Mwaluma
+                                    Julie Kellie
                                 </h6>
                                 <p class="uppercase">Finance Consultant</p>
                             </div>
@@ -1014,7 +1014,7 @@
                             </div>
                             <div class="text-center">
                                 <h6 class="fs-500 ff-heading fw-bold">
-                                    Abdinur Sheikh
+                                    Osborn Chris
                                 </h6>
                                 <p class="uppercase">Business Advisor</p>
                             </div>
